[package]
name = "rxo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.26"
num-traits = "0.2.15"
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
